build.gradle writes Version.java, layout for landscape